--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     div.header {
         padding: 12px;
         color: white;
-        background-color: black;
+        background: linear-gradient(to right, #00ABC0, #5F4B8B);
         font-size: 22px;
         box-shadow: 1px 2px 4px 1px rgba(0, 0, 0, 0.3);
     }
