--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang='ko'>
 <header>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='user-scalable=no width=device-width' />
+    <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no width=device-width" />
     <title>여자친구 노래방 번호 검색기</title>
+    <meta property="og:title" content="여자친구 노래방 번호 검색기" />
+    <meta property="og:description" content="여자친구 노래 노래방 수록곡 검색기"" />
+    <meta property="og:image" content="./thumb.jpg" />
+    
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="여자친구 노래방 번호 검색기">
+    <meta name="twitter:description" content="여자친구 노래 노래방 수록곡 검색기">
+    <meta name="twitter:image" property="twitter:image:src" content="https://music.gfriend.kr/thumb.jpg">
+
     <link rel='stylesheet' type='text/css' href='style.css'>
 </header>
 
