--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ko'>
 <header>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=no width=device-width" />
+    <meta name="viewport" content="user-scalable=yes width=device-width" />
     <title>여자친구 노래방 번호 검색기</title>
     <meta property="og:title" content="여자친구 노래방 번호 검색기" />
     <meta property="og:description" content="여자친구 노래 노래방 수록곡 검색기"" />
