github and OhMyGirl link added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     </div>
     <div class='footer'>
         <p class='copyright'>© 2023-2025 Dark Tornado, All rights reserved.</p>
+        <p class='copyright'>
+            <a href='https://github.com/DarkTornado/GfriendMusic'>Github</a>
+            | 
+            <a href='https://omg.dtjs.io/'>오마이걸</a>
+        </p>
     </div>
     <script type='text/javascript' src='./script.js'></script>
     <script type='text/javascript'>
